# odr

./: odr-ovpn-connect  odr-ovpn-disconnect  odr.conf  odrd  setup.cfg  setup.py
odr/: cmdconnection.py  config.py  connect_script.py  dhcprequestor.py  disconnect_script.py  fdsend.py  linesocket.py  listeningsocket.py  odrd.py  ovpn.py  ovpn_config.py  parse.py  queue.py  realmdata.py  route.py  socketloop.py  timeoutmgr.py  weakmethod.py
tests/: conftest.py  test_fdsend.py  test_ovpn.py
tests/odr/: test_dhcprequestor.py  test_ovpn_config.py
