[metadata]
name = odr
version = attr: odr.VERSION
description = OpenVpn DHCP Requestor
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = one, two
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = False
zip_safe = False
packages = find:
install_requires =

[options.entry_points]
console_scripts =
    odrd = odr.odrd:main
    odr-ovpn-connect = odr.connect_script:main
    odr-ovpn-disconnect = odr.disconnect_script:main
